--- a/Readme
+++ b/Readme
@@ -11,3 +11,9 @@ echo:
     echo oui -n => oui -n
     echo "oui" -n => ouiminijoker>
     echo oui            non => oui non
+
+a faire:
+    regarder comment marchent les redirections
+        - Ca creer le fichier des le debut ?
+        - Ca redirige quoi si ya une erreur ?
+        - La creation de fichier peut crash ?
