flemme de me co a github pour modif le readme

--- a/Readme
+++ b/Readme
@@ -74,3 +74,8 @@ mini->ffdin = open(prout);
         - les HERE_DOCUMENTS
         - LES > < >> << A ENLEVER DU PARSING APRES AVOIR OUVERT LES FICHIERS
             => UNE FCT MINI_LSTDEL(T_TOKEN **TOKENS) (TOKENS = L ELEMENT A DELETE)
+
+ROBIN PARTS => A FAIRE
+    - CORRIGER EXPORT (LES NOMS DE VARIABLES)
+    - CORRIGER ENV
+    - FAIRE DES TESTS SUR LES TRUCS QUI MARCHENT (DEMANDE MOI AU PIRE)
