--- a/Readme
+++ b/Readme
@@ -76,6 +76,45 @@ mini->ffdin = open(prout);
             => UNE FCT MINI_LSTDEL(T_TOKEN **TOKENS) (TOKENS = L ELEMENT A DELETE)
 
 ROBIN PARTS => A FAIRE
-    - CORRIGER EXPORT (LES NOMS DE VARIABLES)
+    - CORRIGER EXPORT (LES NOMS DE VARIABLES) + trie
     - CORRIGER ENV
     - FAIRE DES TESTS SUR LES TRUCS QUI MARCHENT (DEMANDE MOI AU PIRE)
+
+13/07 => A TEST:
+    - LES $
+    - LES MAJS
+    - LES > < >> << A ENLEVER DU PARSING APRES AVOIR OUVERT LES FICHIERS
+            => UNE FCT MINI_LSTDEL(T_TOKEN **TOKENS) (TOKENS = L ELEMENT A DELETE)
+
+18/07 => HEREDOC:
+    - cat << + FILE1 FILE2
+    > lol
+    > +
+    va cat FILE1 et FILE2
+
+    - cat << +
+    > lol
+    > +
+    va afficher lol comme si on lui avait donne le heredoc comme fichier
+
+
+
+TESTS: ERRORS A CORRIGES
+
+
+
+
+MSH
+   .    . 	  __________   __   __ \n
+  /	 \/  \   |   _______| |  | |  |\n
+ / /\__/\ \	 |  |_______  |  |_|  |\n
+/_/	     \_\ |_________ | |   _   |\n
+________________________| |__| |__|\n
+
+TCHOUTCHOU
+          __  __     _               _         _            _                     
+    o O O|  \/  |   (_)    _ _      (_)     _ | |   ___    | |__    ___      _ _  
+   o     | |\/| |   | |   | ' \     | |    | || |  / _ \   | / /   / -_)    | '_| 
+  TS__[O]|_|__|_|  _|_|_  |_||_|   _|_|_   _\__/   \___/   |_\_\   \___|   _|_|_  
+ {======|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""| 
+./o--000'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'
